	* fix warnings in snowdaemon.cpp
	* fix warnings in snowccd.cpp
	* fix warnings in SxUtils.cpp, SxAO.cpp, SxCcdM26.cpp
	* fix warnings in NiceMount.cpp
	* fix warnings in QsiCcd.cpp, QsiFilterWheel.cpp
	* fix warnings in AsiLocator.{h,cpp}, AsiCamera.cpp
	* fix warnings in astroconfig.cpp
	* fix warnings in guider.cpp
	* fix warnings in astrosunmoon.cpp, astroephemeris.cpp

20200816:
	* rework ASI driver
	* add CoolerInfo.cpp
	* fix some timing issues with the SX guideport
	* add PrecisionTime class
	* cleanup the snow client code
	* fix signal handling in some of the snow client programs

20200815:
	* add Time class
	* add astrocooler, astroccd, astrofilterwheel, programs
	* add snowcamera, snowcooler, snowccd, snowguideport programs
	* complete sx driver rework (can now reconnect)

20200814:
	* rework the sx driver
	* new naming scheme for sx devices
	* add code to allow the sx driver from a connection failure or device
	  reenumeration

20200812:
	* make help message more precise in snowguideport client

20200805:
	* improve thread mapping in debug.cpp

20200804:
	* add snowadaptiveoptics command

20200803:
	* add callback stuff to the nice devices
	* add callback stuff to more ice interfaces

20200802:
	* add callbacks to filterwheel
	* add pause and resume to the heartbeat interface
	* add interval callback to the heartbeat interface
	* add pause/resume commands to the snowheartbeat program

20200801:
	* add callback to the ccd device
	* add callback to CcdI servant interface and implementation

20200731:
	* add processSize method to Daemon interface
	* fix possible seg faults in CommunicatorSingleton

20200717:
	* add implementation of Size(std::string) constructor
	* implement Angle(std::string) constructor
	* improve MilkyWay parser
	* add more operator<< for angle types
	* fix rounding of seconds in HMS/DMS display

20200716:
	* add GridCalculator class and gridcalculator utility

20200713:
	* add perturbation series for planets

20200710: