@@ -33,6 +33,8 @@ ChangeLog for the Astro project.
 	* fix warnings in astroconfig.cpp
 	* fix warnings in guider.cpp
 	* fix warnings in astrosunmoon.cpp, astroephemeris.cpp
+	* add timestamp to monitor functions of snowclient programs
+	* fix CelestronMount rewrite
 
 20200816:
 	* rework ASI driver
